--- a/S06_rails_avance/S06J4/twitter-bis/Gemfile
+++ b/S06_rails_avance/S06J4/twitter-bis/Gemfile
@@ -1,8 +1,8 @@
 source 'https://rubygems.org'
 
 git_source(:github) do |repo_name|
-	repo_name = "#{repo_name}/#{repo_name}" unless repo_name.include?("/")
-	"https://github.com/#{repo_name}.git"
+  repo_name = "#{repo_name}/#{repo_name}" unless repo_name.include?("/")
+  "https://github.com/#{repo_name}.git"
 end
 
 gem 'rails',        '5.1.2'
@@ -15,21 +15,24 @@ gem 'turbolinks',   '5.0.1'
 gem 'jbuilder',     '2.7.0'
 gem 'bcrypt' ,   '~>3.1.7'
 gem 'bootstrap-sass', '3.3.7'
+gem 'figaro'
+gem 'twitter'
+gem 'devise'
 
 group :development, :test do
-	gem 'sqlite3', '1.3.13'
-	gem 'byebug',  '9.0.6', platform: :mri
+  gem 'sqlite3', '1.3.13'
+  gem 'byebug',  '9.0.6', platform: :mri
 end
 
 group :development do
-	gem 'web-console',           '3.5.1'
-	gem 'listen',                '3.1.5'
-	gem 'spring',                '2.0.2'
-	gem 'spring-watcher-listen', '2.0.1'
+  gem 'web-console',           '3.5.1'
+  gem 'listen',                '3.1.5'
+  gem 'spring',                '2.0.2'
+  gem 'spring-watcher-listen', '2.0.1'
 end
 
 group :production do
-	gem 'pg', '0.20.0'
+  gem 'pg', '0.20.0'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
