--- a/S09_JS_front/S09J2/api-gmaps/config/secrets.yml
+++ b/S09_JS_front/S09J2/api-gmaps/config/secrets.yml
@@ -15,6 +15,8 @@
 # shared:
 #   api_key: a1B2c3D4e5F6
 
+api_key:  AIzaSyABEDu_IR2D2u6nkWNHEwjCaCYYx3LMwPk
+
 # Environmental secrets are only available for that specific environment.
 
 development:
