--- a/S09_JS_front/S09J2/api-gmaps/Gemfile
+++ b/S09_JS_front/S09J2/api-gmaps/Gemfile
@@ -16,6 +16,7 @@ gem 'jbuilder',     '2.7.0'
 gem 'bcrypt' ,   '~>3.1.7'
 gem 'bootstrap-sass', '3.3.7'
 gem 'figaro'
+gem 'pry'
 
 group :development, :test do
   gem 'sqlite3', '1.3.13'
